Update bower dependencies:
-Juicy/juicy-json-editor@1.1.0
-Juicy/juicy-tile-list@1.1.0
-Juicy/juicy-tile-grid@1.2.1
-StarcounterSamples/launcher-include@0.1.0

fix for Starcounter/RebelsLounge#13

--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -1,3 +1,8 @@
+<!--
+    juicy-tile-editor
+    @version: 1.1.0
+    MIT
+-->
 ﻿<link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../juicy-highlight/src/juicy-highlight.html">
 <link rel="import" href="juicy-tile-editor-font.html">
