remove the usage of the word Polyjuice (https://github.com/Polyjuice/Polyjuice/issues/74)

--- a/mergedHTMLexample.html
+++ b/mergedHTMLexample.html
@@ -1,4 +1,4 @@
-<!-- URL: /polyjuice-merger?Skyper=/skyper-user.html&SuperCRM=/contact.html -->
+<!-- URL: /sc/mapping/htmlmerger?Skyper=/skyper-user.html&SuperCRM=/contact.html -->
 
 <template bind="{{SuperCRM}}">
 <!-- /contact.html -->
