--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/juicy-tile-grid.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/juicy-tile-grid.html
@@ -3,7 +3,7 @@
 
 @element juicy-tile-grid
 @demo https://Juicy.github.io/juicy-tile-grid/
-version: 1.2.0
+version: 1.2.3
 -->
 <!-- Import juicy-tile-list -->
 <link rel="import" href="../juicy-tile-list/src/juicy-tile-list.html">
@@ -102,7 +102,7 @@ version: 1.2.0
             this.attributeChangedCallback("defaulttilesetup", null, this.getAttribute("defaulttilesetup"));
             this.attributeChangedCallback("setup", null, this.getAttribute("setup"));
 
-            // IDEA: consider merging with createItemsList, and re-flow setup, to fix Polyjuice glitches (tomalec)
+            // IDEA: consider merging with createItemsList, and re-flow setup, to fix Starcounter merged partials glitches (tomalec)
             Package.call(this, this.setup && this.setup.items !== undefined ? this.setup : undefined);
 
             if (this.gutter != undefined) {
@@ -270,7 +270,7 @@ version: 1.2.0
                 //}
             }
             element.shadowContainer.appendChild(wrappers);
-            tiles["root"] = element.shadowContainer;
+            tiles["root"] = element; // real HTML element, not DocumentFragment at // .shadowContainer;
             return tiles;
         };
 
