--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/index-ie.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/index-ie.html
@@ -27,6 +27,8 @@
         juicy-tile-list {
             padding: 1em;
             box-shadow: inset 0px 0px 10px 0px rgba(50, 50, 50, 0.6);
+            display: block;
+            overflow: auto;
         }
 
         juicy-tile-list#st1 {
@@ -35,33 +37,29 @@
             margin: 2em 0;
         }
 
-        juicy-tile-list > * {
+        juicy-tile-list .tile {
             box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.75);
+            overflow: auto;
         }
 
-        juicy-tile-list > :first-child {
+        juicy-tile-list .tile-0 {
             background: lightgreen;
         }
 
-        juicy-tile-list > :nth-child(2) {
-            /* background:lightblue; */
+        juicy-tile-list .tile-1 {
             background: rgba(173, 216, 230, 0.8);
         }
 
-        juicy-tile-list > :nth-child(3) {
-            /*background:yellow;*/
+        juicy-tile-list .tile-2 {
             background: rgba(255, 255, 0, 0.8);
-            overflow: auto;
         }
 
-        juicy-tile-list > :nth-child(4) {
+        juicy-tile-list .tile-3 {
             background: gray;
-            overflow: auto;
         }
 
-        juicy-tile-list > :nth-child(5) {
+        juicy-tile-list .tile-4 {
             background: orange;
-            overflow: auto;
         }
 
         #aboveOverlay {
@@ -84,61 +82,56 @@
         <template is="dom-bind" id="root">
             <template is="dom-if" if="{{model.editingMode}}" restamp="true">
                 <div id="aboveOverlay">
-                    <juicy-tile-editor selection-mode="true"></juicy-tile-editor>
+                    <juicy-tile-editor selection-mode="true" on-juicy-tile-editor-close="closeEditor"></juicy-tile-editor>
                 </div>
-                <script>
-                    document.querySelector("juicy-tile-editor").addEventListener("juicy-tile-editor-close", function (e) {
-                        document.querySelector("template#root").set("model.editingMode", false);
-                    });
-                </script>
             </template>
             <p>Press Ctrl or Command on your keyboard and move your mouse over an item to edit</p>
-            <label><input type="checkbox" checked="{{model.editingMode::change}}"> Show editor (<span>{{model.editingMode}}</span>)</label>
+            <label><input type="checkbox" checked="{{model.editingMode::change}}" /> Show editor (<span>{{model.editingMode}}</span>)</label>
             <juicy-tiles-setup-sync name="juicy-tile-editor/index.html" stored-value="{{model.setup}}" use-localstorage="true"></juicy-tiles-setup-sync>
             <juicy-tile-list id="st1" setup="{{model.setup}}">
-                <div>Item 0 </div>
-                <div>
+                <div class="tile tile-0">Item 0 </div>
+                <div class="tile tile-1">
                     <button onclick="blockme()">Item 1</button>
                 </div>
-                <div>
+                <div class="tile tile-2">
                     <input value="Input2">
                 </div>
-                <div>
+                <div class="tile tile-3">
                     Nested tiles 1:
                     <juicy-tile-list setup="{{model.setup2}}">
-                        <div>Subitem 0 </div>
-                        <div>
+                        <div class="tile tile-0">Subitem 0 </div>
+                        <div class="tile tile-1">
                             <button>Subitem 1</button>
                         </div>
-                        <div>
+                        <div class="tile tile-2">
                             <input value="Subitem2">
                         </div>
-                        <section>Subitem 3</section>
+                        <section class="tile tile-3">Subitem 3</section>
                     </juicy-tile-list>
-                    <section>
+                    <section class="tile tile-1">
                         Nested tiles 2:
                         <juicy-tile-list setup="{{model.setup2}}">
-                            <div>Subitem 0 </div>
-                            <div>
+                            <div class="tile tile-0">Subitem 0 </div>
+                            <div class="tile tile-1">
                                 <button>Subitem 1</button>
                             </div>
-                            <div>
+                            <div class="tile tile-2">
                                 <input value="Subitem2">
                             </div>
-                            <section>Subitem 3</section>
+                            <section class="tile tile-3">Subitem 3</section>
                         </juicy-tile-list>
                     </section>
                 </div>
-                <div>
+                <div class="tile tile-4">
                     <juicy-tile-list setup="{{model.setup2}}">
-                        <div>Subitem 0 </div>
-                        <div>
+                        <div class="tile tile-0">Subitem 0 </div>
+                        <div class="tile tile-1">
                             <button>Subitem 1</button>
                         </div>
-                        <div>
+                        <div class="tile tile-2">
                             <input value="Subitem2">
                         </div>
-                        <section>Subitem 3</section>
+                        <section class="tile tile-3">Subitem 3</section>
                     </juicy-tile-list>
                 </div>
             </juicy-tile-list>
@@ -204,6 +197,10 @@
             var template = document.querySelector("template#root");
 
             template.model = model;
+
+            template.closeEditor = function () {
+                template.set("model.editingMode", false);
+            };
 
             function blockme() {
                 alert("I should get blocked when editor is opened");
